framec_tests/language_specific/csharp/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                => $^
                int x = ; // malformed native statement
            }
        }
}

